--- a/index.html
+++ b/index.html
@@ -1,101 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Chat communautaire Big Dreams</title>
+  <meta charset="UTF-8">
+  <title>Mon Chat Communautaire</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      background: #f5f5f5;
-    }
-
-    #chat {
-      border: 1px solid #ccc;
-      background: white;
-      height: 300px;
-      overflow-y: auto;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-
-    #message {
-      width: 80%;
-      padding: 10px;
-    }
-
-    #sendBtn {
-      padding: 10px 20px;
-    }
+    body { font-family: sans-serif; background: #f5f5f5; padding: 20px; }
+    #chat-box { height: 300px; overflow-y: scroll; border: 1px solid #ccc; background: white; padding: 10px; margin-bottom: 10px; }
+    input, button { padding: 10px; margin: 5px; }
   </style>
 </head>
 <body>
-
-  <h1>Chat communautaire Big Dreams</h1>
-
-  <div id="chat"></div>
-
-  <input id="username" type="text" placeholder="Ton pseudo"
-    style="width: 100%; margin-bottom:10px; padding: 10px;" />
-
-  <input id="message" type="text" placeholder="Écris ton message..." />
-  <button id="sendBtn">Envoyer</button>
+  <h1>Bienvenue sur le Chat !</h1>
+  <div id="chat-box"></div>
+  <input type="text" id="username" placeholder="Ton pseudo" />
+  <input type="text" id="message" placeholder="Écris ton message..." />
+  <button onclick="sendMessage()">Envoyer</button>
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-database-compat.js"></script>
 
   <script>
-    // ✅ Ta configuration Firebase personnalisée
+    // Config Firebase (remplace avec ta propre config)
     const firebaseConfig = {
-      apiKey: "AIzaSyAayX0yoC9kESc-QAnrOvMUoanummDQ92U",
-      authDomain: "posetonprobleme.firebaseapp.com",
-      databaseURL: "https://posetonprobleme-default-rtdb.firebaseio.com",
-      projectId: "posetonprobleme",
-      storageBucket: "posetonprobleme.appspot.com",
-      messagingSenderId: "172852914305",
-      appId: "1:172852914305:web:9c1dd2fb973fbe0d81c580",
-      measurementId: "G-VM5V3WTWKW"
+      apiKey: "TA_CLE_API",
+      authDomain: "TON_PROJET.firebaseapp.com",
+      databaseURL: "https://TON_PROJET.firebaseio.com",
+      projectId: "TON_PROJET",
+      storageBucket: "TON_PROJET.appspot.com",
+      messagingSenderId: "SENDER_ID",
+      appId: "APP_ID"
     };
 
-    // 🔧 Initialiser Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // 🎯 DOM elements
-    const chatDiv = document.getElementById('chat');
-    const sendBtn = document.getElementById('sendBtn');
-    const messageInput = document.getElementById('message');
-    const usernameInput = document.getElementById('username');
+    function sendMessage() {
+      const username = document.getElementById("username").value;
+      const message = document.getElementById("message").value;
+      if (username && message) {
+        db.ref("messages").push({ name: username, text: message });
+        document.getElementById("message").value = "";
+      }
+    }
 
-    // 📩 Envoi de message
-    sendBtn.onclick = () => {
-      const username = usernameInput.value.trim();
-      const message = messageInput.value.trim();
-
-      if (!username) return alert('Merci de saisir un pseudo');
-      if (!message) return alert('Merci d\'écrire un message');
-
-      db.ref('messages').push({
-        name: username,
-        text: message,
-        timestamp: Date.now()
-      });
-
-      messageInput.value = '';
-    };
-
-    // 🔁 Afficher les messages en temps réel
-    db.ref('messages').orderByChild('timestamp').limitToLast(50).on('child_added', snapshot => {
+    db.ref("messages").on("child_added", function(snapshot) {
       const msg = snapshot.val();
-      const msgElem = document.createElement('p');
-      msgElem.innerHTML = `<strong>${msg.name}:</strong> ${msg.text}`;
-      chatDiv.appendChild(msgElem);
-      chatDiv.scrollTop = chatDiv.scrollHeight;
+      const chatBox = document.getElementById("chat-box");
+      chatBox.innerHTML += `<p><strong>${msg.name}:</strong> ${msg.text}</p>`;
+      chatBox.scrollTop = chatBox.scrollHeight;
     });
   </script>
-
 </body>
 </html>
